# scanner_lib

./: .gitignore  CMakeLists.txt  InateckScannerBle.cs  Program.cs  README.md  csharp_sdk.sln  macos_demo.cpp  main.cpp  scanner.h
SDKDemo/: AppDelegate.swift  BleViewController.swift  BleViewController.xib  SceneDelegate.swift  ViewController.swift
SDKDemo.xcodeproj/: project.pbxproj
SDKDemo.xcodeproj/xcshareddata/xcschemes/: SDKDemo.xcscheme
SDKDemo/Base.lproj/: Main.storyboard
SDKDemo/InateckScannerBleKit.framework/: Info.plist
SDKDemo/View/: BleTableViewCell.swift  BleTableViewCell.xib
ble/: inateck_scanner_ble.h  inateck_scanner_ble_cpp.h
ble/mac/: libscanner_ble_aarch64-apple-darwin.dylib  libscanner_ble_x86_64-apple-darwin.dylib
ble/windows/: scanner_ble_i686-pc-windows-msvc.dll.lib  scanner_ble_x86_64-pc-windows-msvc.dll.lib
cmd/: scanner_cmd.h  scanner_cmd_cpp.h
cmd/mac/: libscanner_ble_aarch64-apple-darwin.dylib  libscanner_ble_x86_64-apple-darwin.dylib
cmd/windows/: scanner_cmd_i686-pc-windows-msvc.dll.lib  scanner_cmd_x86_64-pc-windows-msvc.dll.lib
include/: inateck_scanner_ble_cpp.h
ios_sdk/: AppDelegate.swift  Info.plist  TestObj.h  TestObj.m  ViewController.swift  ios_sdk-Bridging-Header.h
ios_sdk.xcodeproj/: project.pbxproj
ios_sdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios_sdk/Base.lproj/: Main.storyboard
ios_sdk/lib/: scanner.swift  scannerFFI.h  scannerFFI.modulemap
ios_sdkTests/: ios_sdkTests.swift
ios_sdkUITests/: ios_sdkUITests.swift
lib/: libscanner_ble_x86_64-apple-darwin.dylib
(+35 files in other folders)
